Update Masking.java
The constructor Integer(int) is deprecated since version 9